fix footer overlapping content

--- a/CrowdFundingMVC/wwwroot/css/site.css
+++ b/CrowdFundingMVC/wwwroot/css/site.css
@@ -1,6 +1,10 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+.cardTitle {
+    height: 50px;
+}
+
 input[type=number] {
     -moz-appearance: textfield;
 }
@@ -39,6 +43,7 @@ a {
     /*font-weight: 600;*/
     text-shadow: 0 0 2px #ffc107;
 }
+
 
 li, a {
     display: inline-block;
@@ -90,7 +95,7 @@ body {
     display: flex;
     flex-direction: column;
     /* Margin bottom by footer height */
-    margin-bottom: 40px;
+    padding-bottom: 70px;
 }
 
 
@@ -100,7 +105,8 @@ body {
     bottom: 0;
     width: 100%;
     white-space: nowrap;
-    line-height: 40px; /* Vertically center the text there */
+    /*line-height: 40px;*/ /* Vertically center the text there */
+    height: 70px;
 }
 
 .card-img-top {
